# SantiBot

./: .dockerignore  .gitignore  404.html  API_SETUP_GUIDE.txt  CHANGELOG.md  Dockerfile  LICENSE.md  NadekoBot.sln  README.md  SANTI_REPORT.md  SantiBot.sln  TASKS_FOR_SANTI.md  TESTING_CHECKLIST.txt  TESTING_RESULTS.md  create_missing_tables.sql  docker-compose.yml  docker-entrypoint.sh  index.html  locale-cleanup.sql  mkdocs.yml  nrun.sh  sitemap.xml  srun.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  installer-build.yml  mkdocs-deploy.yml
assets/: preview.html
creds-guide/: index.html
dashboard/: package-lock.json  package.json
dashboard/public/: manifest.json
dashboard/src/: middleware.ts
deploy/: pterodactyl-egg.json
deploy/linux/: install.sh  santibot.service  update.sh
docs/: .readthedocs.yaml  getting-started.md  mkdocs-requirements.txt  mkdocs.yml
docs/dashboard/: setup.md
docs/development/: contributing.md
docs/features/: overview.md
docs/guides/: linux-guide.md  source-guide.md
docs/installation/: docker.md  local.md  vps.md
docs/md/: CNAME  creds-guide.md  donate.md  index.md
docs/migration/: from-dyno.md  from-nadekobot.md
donate/: index.html
installer/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
installer/src-tauri/: Cargo.toml  tauri.conf.json
installer/src-tauri/icons/: icon.icns
installer/src-tauri/src/: main.rs
installer/src-tauri/src/commands/: mod.rs
search/: search_index.json
(+4668 files in other folders)
